# aatb_crowd_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: crowd_tracker.yaml
include/aatb_crowd_tracker/: background_model.hpp  cluster_extractor.hpp  heatmap_model.hpp  tracker.hpp
launch/: crowd_tracker.launch.py
src/: background_model.cpp  cluster_extractor.cpp  crowd_tracker_node.cpp  heatmap_model.cpp  tracker.cpp
